Fixed articlePublishDate instances, and improved list item XML. Ready to submit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
 
     <string name="no_internet_connection">No internet connection</string>
     <string name="no_news">No news found.</string>
+
+    <string name="tap_to_read_more">Tap to Read More</string>
 </resources>
